--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,98 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Redis Chat</title>
+    <title>Redis Distributed Chat</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="/socket.io/socket.io.js"></script>
 </head>
-<body class="bg-slate-900 text-white flex items-center justify-center h-screen">
-    <div class="w-full max-w-md bg-slate-800 p-6 rounded-2xl shadow-xl">
-        <h2 class="text-xl font-bold mb-4 border-b border-slate-700 pb-2">Redis Real-Time Chat</h2>
-        <div id="messages" class="h-64 overflow-y-auto mb-4 p-2 bg-slate-900 rounded-lg text-sm space-y-2">
-            </div>
-        <div class="flex gap-2">
-            <input id="message-input" class="flex-1 bg-slate-700 p-2 rounded-lg outline-none" placeholder="Type a message...">
-            <button onclick="sendMessage()" class="bg-blue-600 px-4 py-2 rounded-lg font-bold">Send</button>
+
+<body class="bg-slate-900 text-white flex items-center justify-center h-screen font-sans">
+
+    <div id="login-screen" class="fixed inset-0 bg-slate-950 flex items-center justify-center z-50">
+        <div class="bg-slate-900 p-8 rounded-2xl shadow-2xl border border-slate-800 w-80">
+            <h2 class="text-xl font-bold mb-4 text-center">Identity</h2>
+            <input id="username-input"
+                class="w-full bg-slate-800 p-3 rounded-lg mb-4 outline-none border border-slate-700 focus:border-blue-500"
+                placeholder="Username...">
+            <button onclick="joinChat()"
+                class="w-full bg-blue-600 hover:bg-blue-500 py-3 rounded-lg font-bold transition">Join Chat</button>
+        </div>
+    </div>
+
+    <div
+        class="w-full max-w-md bg-slate-800 h-[600px] flex flex-col rounded-2xl shadow-2xl overflow-hidden border border-slate-700">
+        <div class="bg-slate-900 p-4 border-b border-slate-700">
+            <h1 class="font-bold text-lg flex items-center gap-2">
+                <span class="w-2 h-2 bg-emerald-500 rounded-full animate-pulse"></span>
+                Global Chat
+            </h1>
+        </div>
+
+        <div id="messages" class="flex-1 overflow-y-auto p-4 space-y-3 bg-slate-900/50">
+        </div>
+
+        <div class="p-4 bg-slate-900 border-t border-slate-700 flex gap-2">
+            <input id="message-input" class="flex-1 bg-slate-800 p-2 rounded-lg outline-none" placeholder="Message...">
+            <button onclick="sendMessage()"
+                class="bg-blue-600 px-4 py-2 rounded-lg font-bold hover:bg-blue-500">Send</button>
         </div>
     </div>
 
     <script>
         const socket = io();
-        
+        let myName = "";
+
+        function joinChat() {
+            const input = document.getElementById('username-input');
+            if (input.value.trim()) {
+                myName = input.value.trim();
+                socket.emit('set_username', myName);
+                document.getElementById('login-screen').classList.add('hidden');
+            }
+        }
+
         function sendMessage() {
             const input = document.getElementById('message-input');
-            const msg = input.value;
-            if(msg) {
-                socket.emit('send_message', { room: 'general', message: msg });
+            if (input.value.trim()) {
+                socket.emit('send_message', { message: input.value });
                 input.value = '';
             }
         }
 
-        socket.on('receive_message', (data) => {
+        socket.on('chat_history', (history) => {
             const container = document.getElementById('messages');
-            container.innerHTML += `<div class="p-2 bg-slate-800 rounded"><b>User:</b> ${data.message}</div>`;
+            container.innerHTML = ''; // Clear any old messages or loading text
+            history.forEach(data => {
+                appendMessage(data);
+            });
+        });
+
+        socket.on('receive_message', appendMessage);
+
+        function appendMessage(data) {
+            const container = document.getElementById('messages');
+            const isMe = data.senderId === myName;
+
+            const html = `
+                <div class="flex ${isMe ? 'justify-end' : 'justify-start'}">
+                    <div class="max-w-[80%] p-3 rounded-xl ${isMe ? 'bg-blue-600 rounded-tr-none' : 'bg-slate-700 rounded-tl-none'} shadow-sm">
+                        <div class="flex items-center gap-2 mb-1">
+                            <span class="text-[10px] font-black uppercase text-white/70">${data.senderId}</span>
+                            <span class="text-[9px] text-white/40">${data.timeStamp}</span>
+                        </div>
+                        <p class="text-sm">${data.message}</p>
+                    </div>
+                </div>`;
+            container.innerHTML += html;
+            container.scrollTop = container.scrollHeight;
+        }
+
+        // Allow 'Enter' key to send
+        document.getElementById('message-input').addEventListener('keypress', (e) => {
+            if (e.key === 'Enter') sendMessage();
         });
     </script>
 </body>
+
 </html>
