--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,98 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>Redis Distributed Chat</title>
+    <meta charset="UTF-8">
+    <title>Redis Pro Chat</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <style>
+        .custom-scrollbar::-webkit-scrollbar {
+            width: 4px;
+        }
+
+        .custom-scrollbar::-webkit-scrollbar-track {
+            background: transparent;
+        }
+
+        .custom-scrollbar::-webkit-scrollbar-thumb {
+            background: #334155;
+            border-radius: 10px;
+        }
+    </style>
 </head>
 
-<body class="bg-slate-900 text-white flex items-center justify-center h-screen font-sans">
+<body class="bg-[#0f172a] text-slate-200 h-screen flex items-center justify-center p-4 font-sans">
 
-    <div id="login-screen" class="fixed inset-0 bg-slate-950 flex items-center justify-center z-50">
-        <div class="bg-slate-900 p-8 rounded-2xl shadow-2xl border border-slate-800 w-80 text-center">
-            <h2 class="text-xl font-bold mb-4">Enter Your Name</h2>
+    <div id="login-screen" class="fixed inset-0 bg-slate-950/90 backdrop-blur-md flex items-center justify-center z-50">
+        <div class="bg-slate-900 p-8 rounded-3xl shadow-2xl border border-slate-800 w-full max-w-sm">
+            <div class="text-center mb-8">
+                <div
+                    class="bg-blue-600 w-16 h-16 rounded-2xl mx-auto flex items-center justify-center shadow-lg shadow-blue-500/20 mb-4">
+                    <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z">
+                        </path>
+                    </svg>
+                </div>
+                <h2 class="text-2xl font-bold text-white">Join the Chat</h2>
+                <p class="text-slate-400 text-sm mt-2">Enter a nickname to start messaging</p>
+            </div>
             <input id="username-input"
-                class="w-full bg-slate-800 p-3 rounded-lg mb-4 outline-none border border-slate-700 focus:border-blue-500"
-                placeholder="Username...">
+                class="w-full bg-slate-800 p-4 rounded-xl mb-4 outline-none border border-slate-700 focus:border-blue-500 transition-all text-white"
+                placeholder="What's your name?">
             <button onclick="joinChat()"
-                class="w-full bg-blue-600 hover:bg-blue-500 py-3 rounded-lg font-bold transition">Join Chat</button>
+                class="w-full bg-blue-600 hover:bg-blue-500 py-4 rounded-xl font-bold transition-all transform active:scale-95 shadow-lg shadow-blue-500/25">Get
+                Started</button>
         </div>
     </div>
 
     <div
-        class="w-full max-w-md bg-slate-800 h-[600px] flex flex-col rounded-2xl shadow-2xl overflow-hidden border border-slate-700">
-        <div class="bg-slate-900 p-4 border-b border-slate-700">
-            <h1 class="font-bold text-lg flex items-center gap-2">
-                <span class="w-2 h-2 bg-emerald-500 rounded-full animate-pulse"></span>
-                Redis Global Chat
-            </h1>
-            <span id="user-count" class="text-xs bg-slate-800 px-2 py-1 rounded-full text-slate-400">0 Online</span>
-        </div>
-        <div id="typing-indicator" class="text-[10px] text-slate-500 italic px-4 h-4"></div>
-        <div id="messages" class="flex-1 overflow-y-auto p-4 space-y-3 bg-slate-900/50"></div>
+        class="w-full max-w-5xl h-[85vh] bg-slate-900 rounded-3xl shadow-2xl overflow-hidden border border-slate-800 flex">
 
-        <div class="p-4 bg-slate-900 border-t border-slate-700 flex gap-2">
-            <input id="message-input"
-                class="flex-1 bg-slate-800 p-2 rounded-lg outline-none focus:ring-1 focus:ring-blue-500"
-                placeholder="Type a message...">
-            <button onclick="sendMessage()"
-                class="bg-blue-600 px-4 py-2 rounded-lg font-bold hover:bg-blue-500">Send</button>
+        <div class="w-64 bg-slate-950/50 border-r border-slate-800 hidden md:flex flex-col">
+            <div class="p-6 border-b border-slate-800">
+                <h3 class="text-xs font-bold uppercase tracking-widest text-slate-500">Online Users</h3>
+            </div>
+            <div id="user-list" class="flex-1 p-4 space-y-2 overflow-y-auto custom-scrollbar">
+            </div>
+        </div>
+
+        <div class="flex-1 flex flex-col relative">
+            <div
+                class="bg-slate-900/50 p-4 border-b border-slate-800 backdrop-blur-sm flex justify-between items-center">
+                <div class="flex items-center gap-3">
+                    <div
+                        class="w-3 h-3 bg-emerald-500 rounded-full animate-pulse shadow-[0_0_10px_rgba(16,185,129,0.5)]">
+                    </div>
+                    <h1 class="font-bold text-white">Global Cluster Chat</h1>
+                </div>
+                <button onclick="clearHistory()"
+                    class="text-xs text-slate-500 hover:text-red-400 transition-colors bg-slate-800 px-3 py-1.5 rounded-lg border border-slate-700">Clear
+                    History</button>
+            </div>
+
+            <div id="messages"
+                class="flex-1 overflow-y-auto p-6 space-y-4 custom-scrollbar bg-[url('https://www.transparenttextures.com/patterns/dark-matter.png')]">
+            </div>
+
+            <div class="p-4 bg-slate-900 border-t border-slate-800">
+                <div id="typing-indicator" class="text-[10px] text-blue-400 font-medium px-2 h-4 mb-1"></div>
+                <div
+                    class="flex gap-2 bg-slate-800 p-2 rounded-2xl border border-slate-700 focus-within:border-blue-500 transition-all">
+                    <input id="message-input"
+                        class="flex-1 bg-transparent p-2 outline-none text-sm placeholder-slate-500"
+                        placeholder="Write a message...">
+                    <button onclick="sendMessage()"
+                        class="bg-blue-600 hover:bg-blue-500 p-2 rounded-xl transition-all group">
+                        <svg class="w-5 h-5 text-white transform group-hover:rotate-12 transition-transform" fill="none"
+                            stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8"></path>
+                        </svg>
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -50,29 +105,10 @@
             if (input.value.trim()) {
                 myName = input.value.trim();
                 socket.emit('set_username', myName);
-                document.getElementById('login-screen').classList.add('hidden');
+                document.getElementById('login-screen').style.display = 'none';
             }
         }
-        let typingTimeout;
 
-
-        document.getElementById('message-input').addEventListener('input', () => {
-            socket.emit('typing', true);
-
-            clearTimeout(typingTimeout);
-            typingTimeout = setTimeout(() => {
-                socket.emit('typing', false);
-            }, 2000);
-        });
-
-        socket.on('display_typing', (data) => {
-            const indicator = document.getElementById('typing-indicator');
-            if (data.isTyping && data.username !== myName) {
-                indicator.innerText = `${data.username} is typing...`;
-            } else {
-                indicator.innerText = '';
-            }
-        });
         function sendMessage() {
             const input = document.getElementById('message-input');
             if (input.value.trim()) {
@@ -80,6 +116,32 @@
                 input.value = '';
             }
         }
+
+        function deleteMsg(msgData) {
+            socket.emit('delete_message', msgData);
+        }
+
+        function clearHistory() {
+            // We no longer emit 'clear_all_history' to the server
+            if (confirm("Clear your local chat view? This won't delete messages for others.")) {
+                const container = document.getElementById('messages');
+                container.innerHTML = `
+            <div class="text-center py-8">
+                <p class="text-xs text-slate-500 italic">Local history cleared. New messages will appear below.</p>
+            </div>
+        `;
+            }
+        }
+
+        socket.on('user_list', (users) => {
+            const list = document.getElementById('user-list');
+            list.innerHTML = users.map(user => `
+                <div class="flex items-center gap-3 p-2 rounded-lg hover:bg-slate-800 transition-colors">
+                    <div class="w-2 h-2 rounded-full bg-emerald-500"></div>
+                    <span class="text-sm font-medium ${user === myName ? 'text-blue-400' : 'text-slate-300'}">${user} ${user === myName ? '(You)' : ''}</span>
+                </div>
+            `).join('');
+        });
 
         socket.on('chat_history', (history) => {
             const container = document.getElementById('messages');
@@ -89,32 +151,53 @@
 
         socket.on('receive_message', appendMessage);
 
+        socket.on('remove_message_from_ui', (data) => {
+            const id = `msg-${data.timeStamp.replace(/:/g, '-')}-${data.senderId}`;
+            const el = document.getElementById(id);
+            if (el) el.remove();
+        });
+
+        socket.on('history_cleared', () => {
+            document.getElementById('messages').innerHTML = '';
+        });
+
+        let typingTimeout;
+        document.getElementById('message-input').addEventListener('input', () => {
+            socket.emit('typing', true);
+            clearTimeout(typingTimeout);
+            typingTimeout = setTimeout(() => socket.emit('typing', false), 2000);
+        });
+
+        socket.on('display_typing', (data) => {
+            const indicator = document.getElementById('typing-indicator');
+            indicator.innerText = (data.isTyping && data.username !== myName) ? `${data.username} is typing...` : '';
+        });
+
         function appendMessage(data) {
             const container = document.getElementById('messages');
             const isMe = data.senderId === myName;
+            const msgId = `msg-${data.timeStamp.replace(/:/g, '-')}-${data.senderId}`;
 
             const html = `
-                <div class="flex ${isMe ? 'justify-end' : 'justify-start'}">
-                    <div class="max-w-[80%] p-3 rounded-xl ${isMe ? 'bg-blue-600 rounded-tr-none' : 'bg-slate-700 rounded-tl-none'} shadow-sm">
-                        <div class="flex items-center gap-2 mb-1">
-                            <span class="text-[10px] font-black uppercase text-white/70">${data.senderId}</span>
-                            <span class="text-[9px] text-white/40">${data.timeStamp}</span>
+                <div id="${msgId}" class="flex ${isMe ? 'justify-end' : 'justify-start'} group animate-in fade-in slide-in-from-bottom-2 duration-300">
+                    <div class="max-w-[75%] relative">
+                        <div class="flex items-center gap-2 mb-1 px-1">
+                            <span class="text-[10px] font-bold tracking-tight ${isMe ? 'text-blue-400' : 'text-slate-400'} uppercase">${data.senderId}</span>
+                            <span class="text-[9px] text-slate-600">${data.timeStamp}</span>
                         </div>
-                        <p class="text-sm">${data.message}</p>
+                        <div class="p-3.5 rounded-2xl shadow-lg border ${isMe ? 'bg-blue-600 border-blue-500 text-white rounded-tr-none shadow-blue-500/10' : 'bg-slate-800 border-slate-700 text-slate-200 rounded-tl-none'}">
+                            <p class="text-[13px] leading-relaxed break-words">${data.message}</p>
+                            ${isMe ? `<button onclick='deleteMsg(${JSON.stringify(data)})' class="absolute -left-10 top-1/2 -translate-y-1/2 opacity-0 group-hover:opacity-100 transition-opacity p-2 text-slate-500 hover:text-red-400">
+                                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path></svg>
+                            </button>` : ''}
+                        </div>
                     </div>
                 </div>`;
             container.innerHTML += html;
             container.scrollTop = container.scrollHeight;
         }
 
-        document.getElementById('message-input').addEventListener('keypress', (e) => {
-            if (e.key === 'Enter') sendMessage();
-        });
-
-        socket.on('user_list', (users) => {
-            document.getElementById('user-count').innerText = `${users.length} Online`;
-            console.log("Current users:", users);
-        });
+        document.getElementById('message-input').addEventListener('keypress', (e) => { if (e.key === 'Enter') sendMessage(); });
     </script>
 </body>
 
