--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
             const input = document.getElementById('message-input');
             if (input.value.trim()) {
                 const encrypted = crypt(input.value, CHAT_SECRET);
-                socket.emit('send_message', { message: input.value });
+                socket.emit('send_message', { message: encrypted });
                 input.value = '';
             }
         }
@@ -187,20 +187,21 @@
             const msgId = `msg-${data.timeStamp.replace(/:/g, '-')}-${data.senderId}`;
 
             const html = `
-                <div id="${msgId}" class="flex ${isMe ? 'justify-end' : 'justify-start'} group animate-in fade-in slide-in-from-bottom-2 duration-300">
-                    <div class="max-w-[75%] relative">
-                        <div class="flex items-center gap-2 mb-1 px-1">
-                            <span class="text-[10px] font-bold tracking-tight ${isMe ? 'text-blue-400' : 'text-slate-400'} uppercase">${data.senderId}</span>
-                            <span class="text-[9px] text-slate-600">${data.timeStamp}</span>
-                        </div>
-                        <div class="p-3.5 rounded-2xl shadow-lg border ${isMe ? 'bg-blue-600 border-blue-500 text-white rounded-tr-none shadow-blue-500/10' : 'bg-slate-800 border-slate-700 text-slate-200 rounded-tl-none'}">
-                            <p class="text-[13px] leading-relaxed break-words">${data.message}</p>
-                            ${isMe ? `<button onclick='deleteMsg(${JSON.stringify(data)})' class="absolute -left-10 top-1/2 -translate-y-1/2 opacity-0 group-hover:opacity-100 transition-opacity p-2 text-slate-500 hover:text-red-400">
-                                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path></svg>
-                            </button>` : ''}
-                        </div>
-                    </div>
-                </div>`;
+        <div id="${msgId}" class="flex ${isMe ? 'justify-end' : 'justify-start'} group animate-in fade-in slide-in-from-bottom-2 duration-300">
+            <div class="max-w-[75%] relative">
+                <div class="flex items-center gap-2 mb-1 px-1">
+                    <span class="text-[10px] font-bold tracking-tight ${isMe ? 'text-blue-400' : 'text-slate-400'} uppercase">${data.senderId}</span>
+                    <span class="text-[9px] text-slate-600">${data.timeStamp}</span>
+                </div>
+                <div class="p-3.5 rounded-2xl shadow-lg border ${isMe ? 'bg-blue-600 border-blue-500 text-white rounded-tr-none shadow-blue-500/10' : 'bg-slate-800 border-slate-700 text-slate-200 rounded-tl-none'}">
+                    <p class="text-[13px] leading-relaxed break-words">${decryptedMessage}</p>
+                    
+                    ${isMe ? `<button onclick='deleteMsg(${JSON.stringify(data)})' class="absolute -left-10 top-1/2 -translate-y-1/2 opacity-0 group-hover:opacity-100 transition-opacity p-2 text-slate-500 hover:text-red-400">
+                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path></svg>
+                    </button>` : ''}
+                </div>
+            </div>
+        </div>`;
             container.innerHTML += html;
             container.scrollTop = container.scrollHeight;
         }
